--- a/style.css
+++ b/style.css
@@ -17,8 +17,7 @@ h1 {
 }
 
 nav {
-    position: relative;
-    width: 25%;
+    width: 30%;
     height: 88.7%;
     background-color: rgb(139, 69, 185);
     overflow-y: scroll;
@@ -29,8 +28,8 @@ ul {
 }
 
 li {
-    margin: 20px;
-    padding: 20px;
+    margin-top: 40px;
+    padding: 20px 7px;
     border-left: 3px solid rgb(255, 187, 0);
     list-style: none;
     cursor: pointer;
@@ -46,7 +45,7 @@ li:hover {
 
 .img-container {
     position: absolute;
-    width: 75%;
+    width: 70%;
     height: 88.7%;
     top: 85px;
     right: 0;
@@ -84,3 +83,29 @@ img {
     padding: 10px;
     font-size: 26px;
 }
+
+#li {
+    position: relative;
+    width: 96%;
+    height: 100px;
+    font-size: 27px;
+    color: white;
+}
+
+
+#li #style {
+    background-color: rgba(87, 19, 133, 0.575);
+    z-index: 3;
+    transform: translateX(133px);
+    height: 100%;
+    width: 72%;
+    position: absolute;
+    top: 0;
+}
+
+/*
+#li:hover #style {
+    height: 100%;
+    transition: all .7s ease-in-out;
+}
+*/
